--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -39,7 +39,7 @@
 	<div class="parallax-container">
 		<div class="parallax">
 			
-		<div class="headline">
+		<div class="headline" id="home">
 			<h1>William Tran</h1>
 
 			<p>I am <span>DEDICATED, FOCUSED and <span style="font-style: italic" >extremely</span> DRIVEN.</span></p>
