--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,16 @@
 	
 </head>
 <body>
+	<a id="home"></a>
+	<a id="about"></a>
+	<a id="projects"></a>
+	<a id="tech"></a>
+	<a id="contact"></a>
 	<div class="navbar-fixed">
 		<nav data-activates="nav-mobile" class="button-collapse">
 			<div class="nav-wrapper">
 
-				<a href="#!" class="brand-logo"><img class="logo" src="../assets/logo.png"></a>
+				<a href="#home" class="brand-logo"><img class="logo" src="../assets/logo.png"></a>
 				<a materialize="sideNav" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="#about">ABOUT ME</a></li>
