--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <head>
+	<title>William Tran- Software Developer</title>
 	<!-- <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="../node_modules/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="../node_modules/materialize-css/dist/js/materialize.js"></script>
@@ -9,11 +10,6 @@
 	
 </head>
 <body>
-	<a id="home"></a>
-	<a id="about"></a>
-	<a id="projects"></a>
-	<a id="tech"></a>
-	<a id="contact"></a>
 	<div class="navbar-fixed">
 		<nav data-activates="nav-mobile" class="button-collapse">
 			<div class="nav-wrapper">
@@ -40,7 +36,6 @@
 		<div class="divider"></div>
 		
 	</ul>
-	
 </body>
 
 <router-outlet></router-outlet>
