--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -60,7 +60,7 @@
 
 			<h2>About Me</h2>
 			<div class="me-section">
-				<img src="../assets/me3.jpg" class="me">
+				<img src="../assets/freelancer.jpg" class="me">
 				<div class="about-me">
 					<h5>From Finance to Tech</h5>
 					<p>Transitioning from the world of financial statements to having the opportunity to implement technology and creating applications that influences lives. Having worked in different industries with a focus on Finance and Accounting for 10+ years, I realized how microprocessing and automation plays a huge role in companies. These advancements in technology paved way to my curiosity as I set foot to being a software developer.</p> 
